Movement, Test map, Items

--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.Axis
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps/Tile
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -813,28 +813,99 @@ TextRenderActor.Tags=True
 TextRenderActor.Cooking=True
 TextRenderActor.Replication=True
 TextRenderActor.Input=True
+Items_C.Tick=True
+Items_C.Pawn=True
+Items_C.Camera=True
+Items_C.Rendering=True
+Items_C.Replication=True
+Items_C.Input=True
+Items_C.Actor=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+Items_C.Default=True
+REINST_MainCharacter_C_78.None=True
+REINST_MainCharacter_C_78.Tick=True
+REINST_MainCharacter_C_78.Character=True
+REINST_MainCharacter_C_78.Camera=True
+REINST_MainCharacter_C_78.Pawn=True
+REINST_MainCharacter_C_78.Rendering=True
+REINST_MainCharacter_C_78.Replication=True
+REINST_MainCharacter_C_78.Input=True
+REINST_MainCharacter_C_78.Actor=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+Items_C.TransformCommon=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+SweetDreamDisplay_C.Appearance=True
+SweetDreamDisplay_C.Designer=True
+SweetDreamDisplay_C.Input=True
+SweetDreamDisplay_C.Interaction=True
+SweetDreamDisplay_C.Performance=True
+SweetDreamDisplay_C.Layout=True
+SweetDreamDisplay_C.Behavior=True
+SweetDreamDisplay_C.Render Transform=True
+SweetDreamDisplay_C.Clipping=True
+SweetDreamDisplay_C.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Maps/Tile/FirstMap.FirstMap
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Items.Items
+OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
+OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Maps/Tile/FirstMap
-MRUItem1=/Game/TopDownBP/Blueprints/MainCharacter
-MRUItem2=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
-MRUItem3=/Game/TopDownBP/Maps/Tile/Background_TileSet
-MRUItem4=/Game/TopDownBP/Maps/Tile/Background
-MRUItem5=/Game/Geometry/Meshes/TemplateFloor
-MRUItem6=/Game/TopDownBP/GameMode/SweetDreamMode
-MRUItem7=/Game/TopDownBP/Maps/Tile/MainCharacter
-MRUItem8=/Game/TopDownBP/Maps/Tile/Sandman_walk_cycle__side_
-MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
+MRUItem1=/Game/TopDownBP/Maps/Tile/SecondMap
+MRUItem2=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem3=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem4=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem5=/Game/TopDownBP/Texture/Dream_Clouds
+MRUItem6=/Game/TopDownBP/Blueprints/Items
+MRUItem7=/Game/TopDownBP/Maps/Tile/FirstMap
+MRUItem8=/Game/TopDownBP/Maps/Tile/Background_TileSet
+MRUItem9=/Game/TopDownBP/Maps/Tile/Background
+MRUItem10=/Game/Geometry/Meshes/TemplateFloor
+MRUItem11=/Game/TopDownBP/Maps/Tile/MainCharacter
+MRUItem12=/Game/TopDownBP/Maps/Tile/Sandman_walk_cycle__side_
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
 
 [SelectionDetails]
 PreserveScaleRatio=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/Items.Items;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/TopDownBP/Maps/Tile/FirstMap.FirstMap;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter;
 
@@ -842,17 +913,25 @@ RecentlyPlaced=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter;
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
 /Game/Geometry/Meshes/TemplateFloor.TemplateFloor=0
 /Game/TopDownBP/Maps/Tile/Background_TileSet.Background_TileSet=0
-/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet.Tileset_sandman_TileSet=1
+/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet.Tileset_sandman_TileSet=0
 /Game/TopDownBP/Maps/Tile/FirstMap.FirstMap=0
+/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter=0
+/Game/TopDownBP/Blueprints/Items.Items_C:ItemFlipbook_GEN_VARIABLE=0
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" "
 Object=
+PaperTileMap=
+MainCharacter_C="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+PaperCharacter="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+Character="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+Pawn=
+REINST_MainCharacter_C_82="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=179.000 Y=93.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1520,5 +1599,30 @@ StaticMeshEditor.TimeStamp=2019.01.10-01.12.01
 StaticMeshEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2019.01.10-01.10.31
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 
