--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.Axis
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps/Tile
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -878,7 +878,7 @@ SweetDreamDisplay_C.Clipping=True
 SweetDreamDisplay_C.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Items.Items
 OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
 OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode
@@ -925,13 +925,13 @@ PaperTileMap=
 MainCharacter_C="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 PaperCharacter="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 Character="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
-Pawn=
+Pawn="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_82="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 
 [RootWindow]
 ScreenPosition=X=179.000 Y=93.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -951,7 +951,7 @@ UNR=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 BRUSH=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 FBX=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 FBXAnim=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
-GenericImport=../../../../../../Users/gteng/Downloads/Tileset_sandman.png
+GenericImport="//gteng.homes.deakin.edu.au/my-home/UserData/Desktop/254/SweetDreamOvertime/Dream_Clouds.png"
 GenericExport=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 GenericOpen=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 GenericSave=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
@@ -1599,6 +1599,8 @@ StaticMeshEditor.TimeStamp=2019.01.10-01.12.01
 StaticMeshEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2019.01.10-01.10.31
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2019.01.10-01.11.46
+SequencerWidgets.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Extra=False
