--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -169,9 +169,10 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+SphereComponent=SphereComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps/Tile
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -456,7 +457,7 @@ MainCharacter_C.Navigation=True
 MainCharacter_C.Physics=True
 MainCharacter_C.Collision=True
 MainCharacter_C.Tags=True
-MainCharacter_C.ComponentReplication=True
+MainCharacter_C.ComponentReplication=False
 MainCharacter_C.Cooking=True
 MainCharacter_C.Events=True
 REINST_MainCharacter_C_43.Variable=True
@@ -876,22 +877,68 @@ SweetDreamDisplay_C.Behavior=True
 SweetDreamDisplay_C.Render Transform=True
 SweetDreamDisplay_C.Clipping=True
 SweetDreamDisplay_C.Navigation=True
+K2Node_VariableGet.Events=True
+Items_C.LOD=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+K2Node_VariableSet.Events=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+Items_C.Cooking=True
+REINST_MainCharacter_C_199.Variable=True
+REINST_MainCharacter_C_199.TransformCommon=True
+REINST_MainCharacter_C_199.Sockets=True
+REINST_MainCharacter_C_199.Shape=True
+REINST_MainCharacter_C_199.Navigation=True
+REINST_MainCharacter_C_199.Rendering=True
+REINST_MainCharacter_C_199.Physics=True
+REINST_MainCharacter_C_199.Collision=True
+REINST_MainCharacter_C_199.Tags=True
+REINST_MainCharacter_C_199.ComponentReplication=True
+REINST_MainCharacter_C_199.Cooking=True
+REINST_MainCharacter_C_199.Events=True
+REINST_MainCharacter_C_207.Variable=True
+REINST_MainCharacter_C_207.TransformCommon=True
+REINST_MainCharacter_C_207.Sockets=True
+REINST_MainCharacter_C_207.Shape=True
+REINST_MainCharacter_C_207.Navigation=True
+REINST_MainCharacter_C_207.Rendering=True
+REINST_MainCharacter_C_207.Physics=True
+REINST_MainCharacter_C_207.Collision=True
+REINST_MainCharacter_C_207.Tags=True
+REINST_MainCharacter_C_207.ComponentReplication=True
+REINST_MainCharacter_C_207.Cooking=True
+REINST_MainCharacter_C_207.Events=True
+REINST_MainCharacter_C_211.Variable=True
+REINST_MainCharacter_C_211.TransformCommon=True
+REINST_MainCharacter_C_211.Sockets=True
+REINST_MainCharacter_C_211.Shape=True
+REINST_MainCharacter_C_211.Navigation=True
+REINST_MainCharacter_C_211.Rendering=True
+REINST_MainCharacter_C_211.Physics=True
+REINST_MainCharacter_C_211.Collision=True
+REINST_MainCharacter_C_211.Tags=True
+REINST_MainCharacter_C_211.ComponentReplication=True
+REINST_MainCharacter_C_211.Cooking=True
+REINST_MainCharacter_C_211.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Items.Items
-OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
-OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
-MRUItem1=/Game/TopDownBP/Maps/Tile/SecondMap
-MRUItem2=/Game/TopDownBP/GameMode/SweetDreamDisplay
-MRUItem3=/Game/TopDownBP/Blueprints/MainCharacter
-MRUItem4=/Game/TopDownBP/GameMode/SweetDreamMode
-MRUItem5=/Game/TopDownBP/Texture/Dream_Clouds
-MRUItem6=/Game/TopDownBP/Blueprints/Items
+MRUItem0=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem1=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem2=/Game/TopDownBP/Blueprints/Items
+MRUItem3=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
+MRUItem4=/Game/TopDownBP/Maps/Tile/SecondMap
+MRUItem5=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem6=/Game/TopDownBP/Texture/Dream_Clouds
 MRUItem7=/Game/TopDownBP/Maps/Tile/FirstMap
 MRUItem8=/Game/TopDownBP/Maps/Tile/Background_TileSet
 MRUItem9=/Game/TopDownBP/Maps/Tile/Background
@@ -917,6 +964,7 @@ RecentlyPlaced=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter;
 /Game/TopDownBP/Maps/Tile/FirstMap.FirstMap=0
 /Game/TopDownBP/Blueprints/MainCharacter.MainCharacter=0
 /Game/TopDownBP/Blueprints/Items.Items_C:ItemFlipbook_GEN_VARIABLE=0
+/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode=0
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" "
@@ -927,9 +975,13 @@ PaperCharacter="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" 
 Character="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 Pawn="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_82="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_MainCharacter_C_199="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_MainCharacter_C_207="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_MainCharacter_C_211="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_MainCharacter_C_215="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 
 [RootWindow]
-ScreenPosition=X=179.000 Y=93.000
+ScreenPosition=X=33.000 Y=88.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1626,5 +1678,15 @@ bIsInPortraitMode=False
 ProfileName=
 ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
+
+[MessageLog]
+LastLogListing=PIE
+
+[DetailCategoriesAdvanced]
+Items_C.Actor=True
+FloatProperty.Variable=True
+IntProperty.Variable=True
+K2Node_VariableGet.Variable=True
+SphereComponent.Collision=True
 
 
