more asset import

--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,7 +20,7 @@ PreviewShaderPlatformName=None
 bIsMaterialQualityOverridePlatform=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=2235,Y=143)
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -925,27 +925,41 @@ REINST_MainCharacter_C_211.Tags=True
 REINST_MainCharacter_C_211.ComponentReplication=True
 REINST_MainCharacter_C_211.Cooking=True
 REINST_MainCharacter_C_211.Events=True
+TopDownGameMode_C.Tick=True
+TopDownGameMode_C.Classes=True
+TopDownGameMode_C.Game=True
+TopDownGameMode_C.GameMode=True
+PaperFlipbook.Sprite=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Items.Items
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter
+OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/MainCharacter
-MRUItem1=/Game/TopDownBP/GameMode/SweetDreamMode
-MRUItem2=/Game/TopDownBP/Blueprints/Items
-MRUItem3=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
-MRUItem4=/Game/TopDownBP/Maps/Tile/SecondMap
-MRUItem5=/Game/TopDownBP/GameMode/SweetDreamDisplay
-MRUItem6=/Game/TopDownBP/Texture/Dream_Clouds
-MRUItem7=/Game/TopDownBP/Maps/Tile/FirstMap
-MRUItem8=/Game/TopDownBP/Maps/Tile/Background_TileSet
-MRUItem9=/Game/TopDownBP/Maps/Tile/Background
-MRUItem10=/Game/Geometry/Meshes/TemplateFloor
-MRUItem11=/Game/TopDownBP/Maps/Tile/MainCharacter
-MRUItem12=/Game/TopDownBP/Maps/Tile/Sandman_walk_cycle__side_
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Texture/Machines/Machines_Sprite
+MRUItem1=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
+MRUItem2=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
+MRUItem3=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
+MRUItem4=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem6=/Game/TopDownBP/Blueprints/Items
+MRUItem7=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem8=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem9=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
+MRUItem10=/Game/TopDownBP/Maps/Tile/SecondMap
+MRUItem11=/Game/TopDownBP/Texture/Dream_Clouds
+MRUItem12=/Game/TopDownBP/Maps/Tile/FirstMap
+MRUItem13=/Game/TopDownBP/Maps/Tile/Background_TileSet
+MRUItem14=/Game/TopDownBP/Maps/Tile/Background
+MRUItem15=/Game/Geometry/Meshes/TemplateFloor
+MRUItem16=/Game/TopDownBP/Maps/Tile/MainCharacter
+MRUItem17=/Game/TopDownBP/Maps/Tile/Sandman_walk_cycle__side_
+MRUItem18=/Game/TopDownBP/Blueprints/TopDownCharacter
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -965,6 +979,9 @@ RecentlyPlaced=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter;
 /Game/TopDownBP/Blueprints/MainCharacter.MainCharacter=0
 /Game/TopDownBP/Blueprints/Items.Items_C:ItemFlipbook_GEN_VARIABLE=0
 /Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode=0
+/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
+/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1.Sandman_walk_cycle__side__Sprite_1=0
+/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_.Sandman_walk_cycle__side_=0
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" "
@@ -973,7 +990,7 @@ PaperTileMap=
 MainCharacter_C="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 PaperCharacter="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 Character="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
-Pawn="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+Pawn=
 REINST_MainCharacter_C_82="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_199="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_207="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
