--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 SphereComponent=SphereComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/GameMode
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -194,6 +194,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -934,22 +936,30 @@ PaperSprite.Sprite=True
 PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+SweetDreamMode_C.Default=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Items.Items
 OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
+OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Texture/Machines/Machines_Sprite
-MRUItem1=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
-MRUItem2=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
-MRUItem3=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
-MRUItem4=/Game/TopDownBP/GameMode/SweetDreamDisplay
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem6=/Game/TopDownBP/Blueprints/Items
-MRUItem7=/Game/TopDownBP/Blueprints/MainCharacter
-MRUItem8=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem0=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem1=/Game/TopDownBP/Texture/Machines/Machines_Sprite
+MRUItem2=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
+MRUItem3=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
+MRUItem4=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
+MRUItem5=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem6=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem7=/Game/TopDownBP/Blueprints/Items
+MRUItem8=/Game/TopDownBP/Blueprints/MainCharacter
 MRUItem9=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
 MRUItem10=/Game/TopDownBP/Maps/Tile/SecondMap
 MRUItem11=/Game/TopDownBP/Texture/Dream_Clouds
@@ -998,7 +1008,7 @@ REINST_MainCharacter_C_211="\"Object.Character.CapsuleComponent.Object.Tags.Comp
 REINST_MainCharacter_C_215="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 
 [RootWindow]
-ScreenPosition=X=33.000 Y=88.000
+ScreenPosition=X=1953.000 Y=88.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1020,7 +1030,7 @@ UNR=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 BRUSH=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 FBX=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 FBXAnim=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
-GenericImport="//gteng.homes.deakin.edu.au/my-home/UserData/Desktop/254/SweetDreamOvertime/Dream_Clouds.png"
+GenericImport="//gteng.homes.deakin.edu.au/my-home/UserData/Desktop/254/SweetDreamOvertime/Machines.png"
 GenericExport=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 GenericOpen=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
 GenericSave=../../../../../../Users/gteng/SweetDreamOvertime/SweetDreamOvertime/Content/
@@ -1705,5 +1715,6 @@ FloatProperty.Variable=True
 IntProperty.Variable=True
 K2Node_VariableGet.Variable=True
 SphereComponent.Collision=True
+K2Node_FunctionEntry.Graph=False
 
 
