--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,6 +170,11 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 SphereComponent=SphereComponent.Collision.Collision,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,
+SweetDreamMode_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+MainCharacter_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/GameMode
@@ -943,23 +948,42 @@ K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 SweetDreamMode_C.Default=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Items.Items
+CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter
 OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode
 
 [ContentBrowserRecent]
 MRUItem0=/Game/TopDownBP/GameMode/SweetDreamMode
-MRUItem1=/Game/TopDownBP/Texture/Machines/Machines_Sprite
-MRUItem2=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
-MRUItem3=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
-MRUItem4=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
-MRUItem5=/Game/TopDownBP/GameMode/SweetDreamDisplay
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem7=/Game/TopDownBP/Blueprints/Items
-MRUItem8=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem1=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem2=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem3=/Game/TopDownBP/Texture/Machines/Machines_Sprite
+MRUItem4=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
+MRUItem5=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
+MRUItem6=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem8=/Game/TopDownBP/Blueprints/Items
 MRUItem9=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
 MRUItem10=/Game/TopDownBP/Maps/Tile/SecondMap
 MRUItem11=/Game/TopDownBP/Texture/Dream_Clouds
@@ -995,17 +1019,24 @@ RecentlyPlaced=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter;
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" "
-Object=
+Object="\"Object.Appearance.Font\" "
 PaperTileMap=
-MainCharacter_C="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
-PaperCharacter="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
-Character="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+MainCharacter_C=
+PaperCharacter=
+Character=
 Pawn=
 REINST_MainCharacter_C_82="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_199="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_207="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_211="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_MainCharacter_C_215="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+SweetDreamMode_C=
+GameModeBase=
+Info=
 
 [RootWindow]
 ScreenPosition=X=1953.000 Y=88.000
@@ -1716,5 +1747,9 @@ IntProperty.Variable=True
 K2Node_VariableGet.Variable=True
 SphereComponent.Collision=True
 K2Node_FunctionEntry.Graph=False
+ArrayProperty.Variable=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
