--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,9 +175,10 @@ SweetDreamMode_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValu
 K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 MainCharacter_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+Spawnorder_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/GameMode
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -967,38 +968,48 @@ K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
+Spawnorder_C.TransformCommon=True
+Spawnorder_C.Default=True
+Spawnorder_C.Pawn=True
+Spawnorder_C.Camera=True
+Spawnorder_C.Rendering=True
+Spawnorder_C.Replication=True
+Spawnorder_C.Input=True
+Spawnorder_C.Actor=True
+Spawnorder_C.Tick=True
+K2Node_GetInputAxisValue.Input=True
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamDisplay.SweetDreamDisplay
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter
-OpenAssetsAtExit=/Game/TopDownBP/GameMode/SweetDreamMode.SweetDreamMode
+CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Spawnorder.Spawnorder
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/GameMode/SweetDreamMode
-MRUItem1=/Game/TopDownBP/GameMode/SweetDreamDisplay
-MRUItem2=/Game/TopDownBP/Blueprints/MainCharacter
-MRUItem3=/Game/TopDownBP/Texture/Machines/Machines_Sprite
-MRUItem4=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
-MRUItem5=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
-MRUItem6=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem8=/Game/TopDownBP/Blueprints/Items
-MRUItem9=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
-MRUItem10=/Game/TopDownBP/Maps/Tile/SecondMap
-MRUItem11=/Game/TopDownBP/Texture/Dream_Clouds
-MRUItem12=/Game/TopDownBP/Maps/Tile/FirstMap
-MRUItem13=/Game/TopDownBP/Maps/Tile/Background_TileSet
-MRUItem14=/Game/TopDownBP/Maps/Tile/Background
-MRUItem15=/Game/Geometry/Meshes/TemplateFloor
-MRUItem16=/Game/TopDownBP/Maps/Tile/MainCharacter
-MRUItem17=/Game/TopDownBP/Maps/Tile/Sandman_walk_cycle__side_
-MRUItem18=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/Spawnorder
+MRUItem1=/Game/TopDownBP/Blueprints/Items
+MRUItem2=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem3=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem4=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem5=/Game/TopDownBP/Texture/Machines/Machines_Sprite
+MRUItem6=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_
+MRUItem7=/Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1
+MRUItem8=/Game/TopDownBP/Texture/Machines/Dream_Ingredients1
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem10=/Game/TopDownBP/Maps/Tile/Tileset_sandman_TileSet
+MRUItem11=/Game/TopDownBP/Maps/Tile/SecondMap
+MRUItem12=/Game/TopDownBP/Texture/Dream_Clouds
+MRUItem13=/Game/TopDownBP/Maps/Tile/FirstMap
+MRUItem14=/Game/TopDownBP/Maps/Tile/Background_TileSet
+MRUItem15=/Game/TopDownBP/Maps/Tile/Background
+MRUItem16=/Game/Geometry/Meshes/TemplateFloor
+MRUItem17=/Game/TopDownBP/Maps/Tile/MainCharacter
+MRUItem18=/Game/TopDownBP/Maps/Tile/Sandman_walk_cycle__side_
+MRUItem19=/Game/TopDownBP/Blueprints/TopDownCharacter
 
 [SelectionDetails]
 PreserveScaleRatio=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/Spawnorder.Spawnorder;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/Items.Items;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/TopDownBP/Maps/Tile/FirstMap.FirstMap;
@@ -1016,10 +1027,11 @@ RecentlyPlaced=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter;
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side__Sprite_1.Sandman_walk_cycle__side__Sprite_1=0
 /Game/TopDownBP/Texture/Character/Sandman_walk_cycle__side_.Sandman_walk_cycle__side_=0
+/Game/TopDownBP/Blueprints/Items.Items=0
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" "
-Object="\"Object.Appearance.Font\" "
+Object=
 PaperTileMap=
 MainCharacter_C=
 PaperCharacter=
@@ -1039,7 +1051,7 @@ GameModeBase=
 Info=
 
 [RootWindow]
-ScreenPosition=X=1953.000 Y=88.000
+ScreenPosition=X=33.000 Y=88.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
