--- a/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SweetDreamOvertime/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1038,8 +1038,8 @@ CheckPoint_C.Input=True
 CheckPoint_C.Actor=True
 BoxComponent.Variable=True
 BoxComponent.TransformCommon=True
-BoxComponent.Sockets=True
-BoxComponent.Shape=True
+BoxComponent.Sockets=False
+BoxComponent.Shape=False
 BoxComponent.Navigation=True
 BoxComponent.Rendering=True
 BoxComponent.Physics=True
@@ -1373,36 +1373,48 @@ PurpleMachine_C.Input=True
 PurpleMachine_C.Actor=True
 OrangeMachine_C.Tick=True
 PurpleMachine_C.Tick=True
+MixMachine_C.Tick=True
+MixMachine_C.Pawn=False
+MixMachine_C.Camera=True
+MixMachine_C.Rendering=True
+MixMachine_C.Replication=True
+MixMachine_C.Input=True
+MixMachine_C.Actor=True
+MixMachine_C.TransformCommon=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MixMachine.MixMachine
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MainCharacter.MainCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/CheckPoint.CheckPoint
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Texture/Font/Timer_Sprite_2
-MRUItem1=/Game/TopDownBP/Texture/Font/SweetDreamFont
-MRUItem2=/Game/TopDownBP/GameMode/SweetDreamDisplay
-MRUItem3=/Game/TopDownBP/GameMode/SweetDreamMode
-MRUItem4=/Game/TopDownBP/Blueprints/OrangeMachine
-MRUItem5=/Game/TopDownBP/Blueprints/PurpleMachine
-MRUItem6=/Game/TopDownBP/Blueprints/YellowMachine
-MRUItem7=/Game/TopDownBP/Blueprints/GreenMachine
-MRUItem8=/Game/TopDownBP/Blueprints/BlueMachine
-MRUItem9=/Game/TopDownBP/Blueprints/RedMachine
-MRUItem10=/Game/TopDownBP/Blueprints/Spawnorder
-MRUItem11=/Game/TopDownBP/Blueprints/FlowerMachine
-MRUItem12=/Game/TopDownBP/Blueprints/DiamondMachine
-MRUItem13=/Game/TopDownBP/Blueprints/HeartMachine
-MRUItem14=/Game/TopDownBP/Blueprints/ItemMachine
-MRUItem15=/Game/TopDownBP/Blueprints/MainCharacter
-MRUItem16=/Game/TopDownBP/Blueprints/CheckPoint
-MRUItem17=/Game/TopDownBP/Texture/Font/Timer_Mat
-MRUItem18=/Game/TopDownBP/Texture/Font/Timer_Sprite_9
-MRUItem19=/Game/TopDownBP/GameMode/NewWidgetBlueprint
+MRUItem0=/Game/TopDownBP/Blueprints/CheckPoint
+MRUItem1=/Game/TopDownBP/Blueprints/MainCharacter
+MRUItem2=/Game/TopDownBP/Blueprints/MixMachine
+MRUItem3=/Game/TopDownBP/Texture/Font/Timer_Sprite_2
+MRUItem4=/Game/TopDownBP/Texture/Font/SweetDreamFont
+MRUItem5=/Game/TopDownBP/GameMode/SweetDreamDisplay
+MRUItem6=/Game/TopDownBP/GameMode/SweetDreamMode
+MRUItem7=/Game/TopDownBP/Blueprints/OrangeMachine
+MRUItem8=/Game/TopDownBP/Blueprints/PurpleMachine
+MRUItem9=/Game/TopDownBP/Blueprints/YellowMachine
+MRUItem10=/Game/TopDownBP/Blueprints/GreenMachine
+MRUItem11=/Game/TopDownBP/Blueprints/BlueMachine
+MRUItem12=/Game/TopDownBP/Blueprints/RedMachine
+MRUItem13=/Game/TopDownBP/Blueprints/Spawnorder
+MRUItem14=/Game/TopDownBP/Blueprints/FlowerMachine
+MRUItem15=/Game/TopDownBP/Blueprints/DiamondMachine
+MRUItem16=/Game/TopDownBP/Blueprints/HeartMachine
+MRUItem17=/Game/TopDownBP/Blueprints/ItemMachine
+MRUItem18=/Game/TopDownBP/Texture/Font/Timer_Mat
+MRUItem19=/Game/TopDownBP/Texture/Font/Timer_Sprite_9
 
 [SelectionDetails]
 PreserveScaleRatio=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/MixMachine.MixMachine;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/PurpleMachine.PurpleMachine;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/OrangeMachine.OrangeMachine;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/BlueMachine.BlueMachine;
